<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.muhammed.inventoryapp.EditorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/title"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_title"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/price_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_layout"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/text_view_price"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_text_price"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_margin="16dp"
                        android:text="@string/currency" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/quantity_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/price_layout"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/text_view_quantity"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/decrement_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/minus" />

                <TextSwitcher
                    android:id="@+id/quantity_switcher"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/increment_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/plus" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/supplier_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/quantity_layout"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/text_view_supplier"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/supplier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_view_supplier"
                    android:inputType="phone" />
            </LinearLayout>
            <Button
                android:id="@+id/order_button"
                android:layout_below="@id/supplier_layout"
                android:layout_centerHorizontal="true"
                android:text="@string/order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                tools:src="@tools:sample/avatars"
                android:layout_margin="4dp"
                android:id="@+id/product_thumbnail"
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:layout_below="@id/order_button"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>


    </ScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_photo_camera_black_24dp" />
</RelativeLayout>


