<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?android:selectableItemBackground"
    android:descendantFocusability="blocksDescendants"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/product_image_view"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/summary_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_toRightOf="@id/product_image_view"
        android:orientation="vertical">

        <TextView
            android:textStyle="bold"
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textAppearance="?android:textAppearanceLarge"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/text_view_price"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/text_view_quantity"
            android:textAppearance="?android:textAppearanceListItemSmall" />

    </LinearLayout>

    <Button
        android:id="@+id/sell_button"
        android:layout_margin="8dp"
        android:theme="@style/MyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@id/product_image_view"
        android:text="@string/sell_button"
       />

</RelativeLayout>